--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "@types/webpack-env": "^1.13.6",
     "awesome-typescript-loader": "^5.2.1",
     "concurrently": "^4.1.0",
-    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "dateformat": "^3.0.3",
     "del": "^3.0.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
+    "filemanager-webpack-plugin": "^2.0.5",
     "fs-extra": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
     "inline-css": "^2.4.1",
